hero work, etc.

--- a/index.html
+++ b/index.html
@@ -3,17 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dan and Didi's Wedding</title>
     <!-- google webfonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./dist/css/style.css">
 </head>
-<body class="bg-white dark:bg-black text-black dark:text-white">
-<div class="container flex flex-col max-h-full max-w-full p-0 m-0">
-<h1 class="text-6xl text-center p-6">Dan &amp; Didi's Wedding Site</h1>
-<p class="text-xl px-12 py-6">You've found the right place.  We're working on the full site, but there's a lot going on right now.  Check back in two weeks. ("Six months." -- Dan) ("Ow, stop hitting me." -- Also Dan)</p>
+<body class="bg-white text-black">
+<div class="container max-h-full max-w-full p-0 m-0">
+<nav class="z-10 sticky">
+    <div class="hidden md:block p-4 rounded-b-2xl bg-planty text-copy text-md text-black">
+        <div class="flex flex-row justify-center"> 
+            <div class="px-8">When &amp; Where</div>
+            <div class="px-8">Hotel</div>
+            <div class="px-8">The Day Of</div>
+            <div class="px-8">RSVP</div>
+            <div class="px-8">Registry</div>
+        </div>
+    </div>    
+    <div class="block md:hidden p-4 bg-planty text-copy text-md text-white"><h2>Dan &amp; Didi</h2></div>
+</nav>
+<section id="hero">
+<div class="bg-left-bottom bg-no-repeat bg-cover py-0" style="background-image: url('dist/img/bg_img.png')">
+Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas eum sapiente exercitationem rerum, ea tempore quis debitis vitae quod est modi aperiam corporis architecto non totam? Quisquam architecto atque esse dolorem ipsum dicta repellat aut quos temporibus cumque fuga itaque quis reprehenderit eum, voluptatum iure, facilis tempore, a sapiente omnis illo. Eos numquam amet eligendi libero, totam vitae magnam saepe, doloribus laudantium suscipit iste incidunt dolores assumenda facere aperiam fugit architecto esse minus nesciunt error! Sunt minima ullam dolor deleniti, neque iure, fugiat corporis ducimus necessitatibus, eius perferendis quam sint quos velit. Cum consequuntur expedita eveniet velit, esse unde corporis.
+</div>
+</section>
 </div>
 </body>
 </html>
