--- a/index.html
+++ b/index.html
@@ -14,20 +14,23 @@
 <div class="container max-h-full max-w-full p-0 m-0">
 <nav class="z-10 sticky">
     <div class="hidden md:block p-4 rounded-b-2xl bg-planty text-copy text-md text-black">
-        <div class="flex flex-row justify-center"> 
-            <div class="px-8">When &amp; Where</div>
-            <div class="px-8">Hotel</div>
-            <div class="px-8">The Day Of</div>
-            <div class="px-8">RSVP</div>
-            <div class="px-8">Registry</div>
+        <div class="flex flex-row justify-center uppercase"> 
+            <div class="px-10">When &amp; Where</div>
+            <div class="px-10">Hotel</div>
+            <div class="px-10">The Day Of</div>
+            <div class="px-10">RSVP</div>
+            <div class="px-10">Registry</div>
         </div>
     </div>    
     <div class="block md:hidden p-4 bg-planty text-copy text-md text-white"><h2>Dan &amp; Didi</h2></div>
 </nav>
 <section id="hero">
 <div class="bg-left-bottom bg-no-repeat bg-cover py-0" style="background-image: url('dist/img/bg_img.png')">
-Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas eum sapiente exercitationem rerum, ea tempore quis debitis vitae quod est modi aperiam corporis architecto non totam? Quisquam architecto atque esse dolorem ipsum dicta repellat aut quos temporibus cumque fuga itaque quis reprehenderit eum, voluptatum iure, facilis tempore, a sapiente omnis illo. Eos numquam amet eligendi libero, totam vitae magnam saepe, doloribus laudantium suscipit iste incidunt dolores assumenda facere aperiam fugit architecto esse minus nesciunt error! Sunt minima ullam dolor deleniti, neque iure, fugiat corporis ducimus necessitatibus, eius perferendis quam sint quos velit. Cum consequuntur expedita eveniet velit, esse unde corporis.
+    <div class="ml-100 w-max bg-forest p-3"><div class="w-max p-3 border-4 border-white"><img src="dist/img/wedding_date.svg"></div></div>
 </div>
+</section>
+<section id="ddd">
+    <div class="hidden lg:block bg-sky text-center text-black p-4 text-4xl"><h1>Dan &amp; Didi</h1></div>
 </section>
 </div>
 </body>
