date box placement

--- a/index.html
+++ b/index.html
@@ -26,11 +26,19 @@
 </nav>
 <section id="hero">
 <div class="bg-left-bottom bg-no-repeat bg-cover py-0" style="background-image: url('dist/img/bg_img.png')">
-    <div class="ml-100 w-max bg-forest p-3"><div class="w-max p-3 border-4 border-white"><img src="dist/img/wedding_date.svg"></div></div>
+    <div class="right-20 ml-100 w-max bg-forest p-3"><div class="w-max p-3 border-4 border-white"><img src="dist/img/wedding_date.svg"></div></div>
 </div>
 </section>
 <section id="ddd">
     <div class="hidden lg:block bg-sky text-center text-black p-4 text-4xl"><h1>Dan &amp; Didi</h1></div>
+</section>
+<!-- the follow section is included for testing purposes -->
+<section id="testing">
+    <div class="hidden xl:block">XL</div>
+    <div class="hidden lg:block xl:hidden">LG</div>
+    <div class="hidden md:block lg:hidden">MD</div>
+    <div class="hidden sm:block md:hidden">SM</div>
+    <div class="block sm:hidden">XS</div>
 </section>
 </div>
 </body>
