--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
     <div class="block md:hidden p-4 bg-planty text-copy text-md text-white"><h2>Dan &amp; Didi</h2></div>
 </nav>
 <section id="hero">
-<div class="bg-left-bottom bg-no-repeat bg-cover py-0" style="background-image: url('dist/img/bg_img.png')">
-    <div class="right-20 ml-100 w-max bg-forest p-3"><div class="w-max p-3 border-4 border-white"><img src="dist/img/wedding_date.svg"></div></div>
+<div class="lg:flex lg:flex-row lg:justify-end bg-left-bottom bg-no-repeat bg-cover py-0" style="background-image: url('dist/img/bg_img.png')">
+    <div class="w-max bg-forest p-3 xs:mx-auto sm:mx-auto md:mx-auto lg:mr-[200px]">
+        <div class="w-max p-3 border-4 border-white"><img src="dist/img/wedding_date.svg"></div>
+    </div>
 </div>
 </section>
 <section id="ddd">
