--- a/index.html
+++ b/index.html
@@ -9,39 +9,68 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./dist/css/style.css">
+    <script src="script.js" defer></script>
 </head>
-<body class="bg-white text-black">
-<div class="container max-h-full max-w-full p-0 m-0">
-<nav class="z-10 sticky">
-    <div class="hidden md:block p-4 rounded-b-2xl bg-planty text-copy text-md text-black">
-        <div class="flex flex-row justify-center uppercase"> 
-            <div class="px-10">When &amp; Where</div>
-            <div class="px-10">Hotel</div>
-            <div class="px-10">The Day Of</div>
-            <div class="px-10">RSVP</div>
-            <div class="px-10">Registry</div>
+<body>
+    <section id="hero">
+        <!-- Hero Container -->
+        <div class="container max-w-full mx-auto p-0 mb-0">
+          <!-- Menu/Logo Container -->
+          <nav class="p-2 rounded-b-2xl flex items-center justify-between bg-planty text-white">
+            <!-- Logo -->
+            <h1 class="text-4xl mt-6 mb-6 ml-6 mr-0">Dan &amp; Didi</h1>
+            <!-- Menu -->
+            <!-- Hamburger Button -->
+            <div>
+              <button
+                id="menu-btn"
+                type="button"
+                class="z-40 m-6 block hamburger focus:outline-none"
+              >
+                <span class="hamburger-top"></span>
+                <span class="hamburger-middle"></span>
+                <span class="hamburger-bottom"></span>
+              </button>
+            </div>
+          </nav>
+  
+          <!-- Mobile Menu -->
+          <div
+            id="menu"
+            class="z-30 absolute top-0 bottom-0 left-0 hidden flex-col self-end w-full min-h-screen py-1 pt-40 pl-12 space-y-3 text-white uppercase bg-forest"
+          >
+            <div class="mx-auto">
+                <a href="#datetime" class="menu-thing" onClick="navToggle()">Where &amp; When</a><br />
+                <a href="#hotel" class="menu-thing" onClick="navToggle()">Accommodations</a><br />
+                <a href="#dayof" class="menu-thing" onClick="navToggle()">The Day Of</a><br />
+                <a href="#dayafter" class="menu-thing" onClick="navToggle()">The Day After</a><br />
+                <a href="#rsvp" class="menu-thing" onClick="navToggle()">RSVP</a><br />
+                <a href="#registry" class="menu-thing" onClick="navToggle()">Registry</a>
+            </div>
+          </div>
         </div>
-    </div>    
-    <div class="block md:hidden p-4 bg-planty text-copy text-md text-white"><h2>Dan &amp; Didi</h2></div>
-</nav>
-<section id="hero">
-<div class="lg:flex lg:flex-row lg:justify-end bg-left-bottom bg-no-repeat bg-cover py-0" style="background-image: url('dist/img/bg_img.png')">
-    <div class="w-max bg-forest p-3 xs:mx-auto sm:mx-auto md:mx-auto lg:mr-[200px]">
-        <div class="w-max p-3 border-4 border-white"><img src="dist/img/wedding_date.svg"></div>
-    </div>
-</div>
-</section>
-<section id="ddd">
-    <div class="hidden lg:block bg-sky text-center text-black p-4 text-4xl"><h1>Dan &amp; Didi</h1></div>
-</section>
-<!-- the follow section is included for testing purposes -->
-<section id="testing">
-    <div class="hidden xl:block">XL</div>
-    <div class="hidden lg:block xl:hidden">LG</div>
-    <div class="hidden md:block lg:hidden">MD</div>
-    <div class="hidden sm:block md:hidden">SM</div>
-    <div class="block sm:hidden">XS</div>
-</section>
-</div>
+    </section>
+    <section id="hero">
+        <div class="z-10 lg:flex lg:flex-row lg:justify-end bg-left-bottom bg-no-repeat bg-cover py-4" style="background-image: url('dist/img/bg_img.png')">
+            <div class="w-max bg-forest p-3 mx-auto">
+                <div class="w-max p-3 border-4 border-white"><img src="dist/img/wedding_date.svg"></div>
+            </div>
+        </div>
+    </section>
+    <section id="datetime">
+        <a name="datetime"></a>
+        <div class="w-60 mx-auto mt-10 mb-3 p-3 rounded-full bg-planty">
+            <h2 class="text-white text-center">Where &amp; When</h2>
+        </div>
+    </section>
+    <!-- this block is included for testing purposes -->
+    <section id="testing">
+        <div class="hidden xl:block">XL</div>
+        <div class="hidden lg:block xl:hidden">LG</div>
+        <div class="hidden md:block lg:hidden">MD</div>
+        <div class="hidden sm:block md:hidden">SM</div>
+        <div class="block sm:hidden">XS</div>
+    </section>
+    </div><!-- end of full-width container -->
 </body>
 </html>
