build complete-ish

--- a/index.html
+++ b/index.html
@@ -57,20 +57,81 @@
             </div>
         </div>
     </section>
+    
+
     <section id="datetime">
         <a name="datetime"></a>
         <div class="w-60 mx-auto mt-10 mb-3 p-3 rounded-full bg-planty">
             <h2 class="text-white text-center">Where &amp; When</h2>
         </div>
+        <p class="w-96 mx-auto mb-4 text-center"><b>June 22, 2024</b><br />
+            The Hotel Emery - 215 S. 4th St.<br />
+            Downtown Minneapolis</p>
+        <p class="text-center">[ <a class="body-link" href="https://maps.app.goo.gl/Vpeb8AFkTmjXoEbw9" target="_blank">Map</a> ]</p>
     </section>
-    <!-- this block is included for testing purposes -->
+
+    <section id="accommodations">
+        <a name="hotel"></a>
+        <div class="w-60 mx-auto mt-16 mb-6 p-3 rounded-full bg-planty">
+            <h2 class="text-white text-center">Accommodations</h2>
+        </div>
+        <p class="w-96 mx-auto mb-4 text-center">We have reserved a block of rooms at the Hotel Emery in downtown Minneapolis.</p>
+        <p class="w-96 mx-auto mb-4 text-center">The Hotel Emery<br>
+            215 S 4th St - Downtown Minneapolis<br>
+            We have a block of rooms starting at $169 per night.<br>
+            Check-in: 3 p.m. | Check-out: 11 a.m.</p>
+        <p class="w-96 mx-auto mb-4 text-center">[ <a class="body-link" href="https://www.marriott.com/event-reservations/reservation-link.mi?
+            id=1688063247456&key=GRP&app=resvlink" target="_blank">Make a Reservation</a> ]</p>
+        <div class="w-96 mx-auto mb-4 text-center"><b>Parking</b><br>
+            Valet is available for the evening and for hotel guests. The entrance is on 4th Street, and there is a
+            parking ramp across the street from the hotel.</div>
+    </section>
+
+    <section id="dayof">
+        <a name="dayof"></a>
+        <div class="w-60 mx-auto mt-10 mb-3 p-3 rounded-full bg-planty">
+            <h2 class="text-white text-center">The Ceremony</h2>
+        </div>
+        <p class="w-96 mx-auto mb-4 text-center"><b>6:00 p.m.: Arrive for Ceremony</b><br>Bryn Mawr Room, Hotel Emery</p>
+        <p class="w-96 mx-auto mb-4 text-center"><b>6:30 p.m.: Cocktail Hour</b><br>The Atrium, Hotel Emery</p>
+        <p class="w-96 mx-auto mb-4 text-center"><b>7:30 p.m.: Dinner</b><br>The Mill Dining Room, Hotel Emery</p>
+    </section>
+
+    <section id="dayafter">
+        <a name="dayafter"></a>
+        <div class="w-60 mx-auto mt-10 mb-3 p-3 rounded-full bg-planty">
+            <h2 class="text-white text-center">The Day After</h2>
+        </div>
+        <p class="w-96 mx-auto mb-4 text-center"><b>June 23, 2024</b><br>
+            5741 2nd Avenue S - Minneapolis, MN 55419<br>
+            [ <a href="https://maps.app.goo.gl/9gDRVuZTjm1rAS6H6" target="_blank" class="body-link">Map</a> ]<br><br>
+            Join us in our home for Southern catering, pastries, and mimosas.<br>&nbsp;<br>
+            Parking is available on the street in front of the house.</p>
+    </section>
+
+    <section id="registry">
+        <a name="registry"></a>
+        <div class="w-60 mx-auto mt-10 mb-3 p-3 rounded-full bg-planty">
+            <h2 class="text-white text-center">Registry</h2>
+        </div>
+        <div class="w-96 mx-auto flex flex-row justify-items-center items-center">
+            <div class="img-registry mr-8">
+                <a class="img-registry" href="https://www.target.com/gift-registry/gift/dan-didi" target="_blank" rel="noopener noreferrer"><img src="./dist/img/logo_target.png"></a>
+            </div>
+            <div class="img-registry ml-8">
+                <a class="img-registry" href="https://www.crateandbarrel.com/gift-registry/registrant-list/7021561" target="_blank" rel="noopener noreferrer"><img src="./dist/img/logo_cb.png"></a>
+            </div>
+        </div>
+    </section>
+
+    <!-- this block is included for testing purposes 
     <section id="testing">
         <div class="hidden xl:block">XL</div>
         <div class="hidden lg:block xl:hidden">LG</div>
         <div class="hidden md:block lg:hidden">MD</div>
         <div class="hidden sm:block md:hidden">SM</div>
         <div class="block sm:hidden">XS</div>
-    </section>
+    </section> -->
     </div><!-- end of full-width container -->
 </body>
 </html>
