--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
                 <a href="#datetime" class="menu-thing" onClick="navToggle()">Where &amp; When</a><br />
                 <a href="#hotel" class="menu-thing" onClick="navToggle()">Accommodations</a><br />
                 <a href="#dayof" class="menu-thing" onClick="navToggle()">The Day Of</a><br />
-                <a href="#dayafter" class="menu-thing" onClick="navToggle()">The Day After</a><br />
-                <a href="#rsvp" class="menu-thing" onClick="navToggle()">RSVP</a><br />
+                <a href="#dayafter" class="menu-thing" onClick="navToggle()">Sunday Brunch</a><br />
                 <a href="#registry" class="menu-thing" onClick="navToggle()">Registry</a>
             </div>
           </div>
@@ -80,8 +79,7 @@
             215 S 4th St - Downtown Minneapolis<br>
             We have a block of rooms starting at $169 per night.<br>
             Check-in: 3 p.m. | Check-out: 11 a.m.</p>
-        <p class="w-96 mx-auto mb-4 text-center">[ <a class="body-link" href="https://www.marriott.com/event-reservations/reservation-link.mi?
-            id=1688063247456&key=GRP&app=resvlink" target="_blank">Make a Reservation</a> ]</p>
+        <p class="w-96 mx-auto mb-4 text-center">[ <a class="body-link" href="https://www.marriott.com/event-reservations/reservation-link.mi?id=1688063247456&key=GRP&app=resvlink" target="_blank">Make a Reservation</a> ]</p>
         <div class="w-96 mx-auto mb-4 text-center"><b>Parking</b><br>
             Valet is available for the evening and for hotel guests. The entrance is on 4th Street, and there is a
             parking ramp across the street from the hotel.</div>
@@ -100,10 +98,10 @@
     <section id="dayafter">
         <a name="dayafter"></a>
         <div class="w-60 mx-auto mt-10 mb-3 p-3 rounded-full bg-planty">
-            <h2 class="text-white text-center">The Day After</h2>
+            <h2 class="text-white text-center">Sunday Brunch</h2>
         </div>
-        <p class="w-96 mx-auto mb-4 text-center"><b>June 23, 2024</b><br>
-            5741 2nd Avenue S - Minneapolis, MN 55419<br>
+        <p class="w-96 mx-auto mb-4 text-center"><b>June 23, 2024 @ 10:30 a.m.</b><br><br>
+            5741 2nd Avenue S<br>Minneapolis, MN 55419<br>
             [ <a href="https://maps.app.goo.gl/9gDRVuZTjm1rAS6H6" target="_blank" class="body-link">Map</a> ]<br><br>
             Join us in our home for Southern catering, pastries, and mimosas.<br>&nbsp;<br>
             Parking is available on the street in front of the house.</p>
@@ -119,7 +117,7 @@
                 <a class="img-registry" href="https://www.target.com/gift-registry/gift/dan-didi" target="_blank" rel="noopener noreferrer"><img src="./dist/img/logo_target.png"></a>
             </div>
             <div class="img-registry ml-8">
-                <a class="img-registry" href="https://www.crateandbarrel.com/gift-registry/registrant-list/7021561" target="_blank" rel="noopener noreferrer"><img src="./dist/img/logo_cb.png"></a>
+                <a class="img-registry" href="https://www.crateandbarrel.com/gift-registry/daniel-bailey-and-didi-klusmann/r7021561" target="_blank" rel="noopener noreferrer"><img src="./dist/img/logo_cb.png"></a>
             </div>
         </div>
     </section>
